--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -38,8 +38,8 @@ layout: default
           <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif page.venue and page.date %}
         <div style="display: flex; justify-content: space-between;">
-          <p><i>{{ post.author }}</i></p>
-          <p>In submission to <i>{{ post.venue }}</i></p>
+          <p><i>{{ page.author }}</i></p>
+          <p>In submission to <i>{{ page.venue }}</i></p>
         </div>
         {% elsif page.date %}
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
