--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,11 +41,11 @@
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
-        <div style="display: flex; justify-content: space-between;">
-          <p style="margin-bottom: 5px;"><i>
+        <div style="display: flex; justify-content: space-between; margin-bottom: 3px;">
+          <p><i>
             {% assign authors = post.author | split: ", " %}
             {% for author in authors %}
-              {% if author == "Yuxuan Li" %}
+              {% if author == "Yuxuan Li" or author == "Yuxuan Li*" %}
                 <strong style="text-decoration: underline;">{{ author }}</strong>
               {% else %}
                 {{ author }}
